package Server;
option optimize_for = SPEED;

message LdpPacket {
	enum Type {
		AUTH_REQUEST 			= 1;
		AUTH_RESPONSE 			= 2;
		
		IMG_DATA 				= 3;
		VOLUME_DATA 			= 4;
		
		MOUSE_POS_DATA 			= 5;
		CURSOR_DATA				= 6;
		
		KEYBOARD_DATA			= 7;
		
		DISCONNECT_REQUEST 		= 8;
	}
	
	required Type type			= 1;

}

message LdpAuthRequest {
	required string password 	= 1;
}

message LdpAuthResponse {
	required bool isSuccess 	= 1;
}

message LdpImageData {
	required bytes compressed			= 1;
	required int32 baseLenght			= 2;
	required int32 blockPosition 		= 3;
}

message LdpVolumeData {
	
}

message LdpMousePositionData {
	required int32 mouseX 				= 1;
	required int32 mouseY 				= 2;
}

message LdpCursorData {
	
}

message LdpKeyboardData {
	
}

message LdpDisconnectRequest {
	
}